- Having ElvUI installed will no longer uncheck conficting option checkboxes.  Conflicting option checkboxes will still be locked but they won't be unchecked.  So if a conflicting option checkbox was checked before installing ElvUI or before enabling a conflicting ElvUI module, it will still be checked after disabling ElvUI or disabling the conflicting ElvUI module.
- The 'Manage frames' option has been removed.  Use Edit Mode to move and scale the player and target frames.

9.2.45 - 19th October 2022
- Dragonflight: For 'Enhance tooltip' ('Interface'), all of the tooltip settings work again except show target (this will be fixed later).
- Dragonflight: Updated 'Sell junk automatically' ('Automation') for 10.0.2.46144.

9.2.44 - 17th October 2022
- Dragonflight: For 'Enhance tooltip' ('Interface'), tooltip color coding, guild ranks, colored backdrops and target will not currently be applied due to issues with the game code.
- Dragonflight: Leatrix Plus entries in the game keybindings menu do not currently have labels due to issues with the game code.  The keybindings themselves will work though.
- Dragonflight: Opening the game keybindings menu and closing it may cause a Lua error to be shown due to issues with the game code.  If so, you should reload your UI.
- Dragonflight: There is no entry for Leatrix Plus in the game addons menu due to issues with the game code.

9.2.43 - 17th October 2022
- Dragonflight: Fixed 'Unclamp chat frame' ('Chat').
- Dragonflight: For 'Enhance minimap' square minimap, fixed the Dragon Isles Summary minimap button position.

9.2.42 - 16th October 2022
- You can now assign a keybind for /mountspecial in the game key bindings menu.  The 'Easy mount special' option has been removed.
- For 'Show minimap icon', some of the modified clicks have changed.  Read the option tooltip for more details.
- For 'Mute game sounds' ('System'), you can now make Pierre quieter.
- Dragonflight: Updated 'Hide talking frame' ('Frames') for 10.0.2.46157.