@@ -3,7 +3,8 @@
 - Added a new option 'Manage vehicle' ('Frames') which will allow you to move and scale the vehicle seat indicator frame.
 - For 'Mute game sounds' ('System'), you can now mute broom mount sounds.
 - Having ElvUI installed will no longer uncheck conficting option checkboxes.  Conflicting option checkboxes will still be locked but they won't be unchecked.  So if a conflicting option checkbox was checked before installing ElvUI or before enabling a conflicting ElvUI module, it will still be checked after disabling ElvUI or disabling the conflicting ElvUI module.
-- The 'Manage frames' option has been removed.  Use Edit Mode to move and scale the player and target frames.
+- The 'Manage frames' option ('Frames') has been removed.  Use Edit Mode to move and scale the player and target frames.
+- The 'Manage buffs' option ('Frames') has been removed.  Use Edit Mode to move and scale the buff and debuff frames.
 
 9.2.45 - 19th October 2022
 - Dragonflight: For 'Enhance tooltip' ('Interface'), all of the tooltip settings work again except show target (this will be fixed later).
